--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,17 @@
         }
     ],
     "require": {
-        "twig/twig": "^2.6",
+        "php": "^7.1",
+        "twig/twig": "^2.0",
         "coduo/php-humanizer": "^2.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^7.0"
     },
     "autoload": {
         "psr-4": {
             "RauweBieten\\": "src/RauweBieten"
         }
-    }
+    },
+    "license": "GPL-3.0"
 }
